--- a/REMO/public/Room/main.css
+++ b/REMO/public/Room/main.css
@@ -74,6 +74,11 @@ button {
     margin: 0.2em 0.1em;
 }
 
+#videoDIV {
+    margin: 0;
+    padding: 0;
+}
+
 div#videos {
     display: flex;
     flex-direction: row;
@@ -81,7 +86,7 @@ div#videos {
 }
 
 #remoteVideo {
-    width: 1475px;
+    width: 100vw;
     object-fit: cover;
     /* width: 100%;*/
     height: 100vh;
@@ -118,7 +123,7 @@ div#videos {
     background: #2f323a;
     padding: 2px;
     padding-top: 30px;
-    margin-top: 0;
+    margin: 0;
     position: fixed;
     left: 0;
     width: 70px;
@@ -141,6 +146,7 @@ div#videos {
 
 .content {
     margin-left: 70px;
+    /* margin-right: 0; */
     background-position: center;
     background-size: cover;
     height: 100vh;
