--- a/REMO/public/pre-interview/pre.css
+++ b/REMO/public/pre-interview/pre.css
@@ -18,9 +18,6 @@ body {
     object-fit: cover;
     width: 700px;
     height: 450px;
-    /* position: relative;
-    left: 0;
-    top: 0; */
     display: block;
     background: #424242;
     transition: right 0.5s linear;
@@ -157,5 +154,5 @@ body {
 #remo-title{
     position: absolute;
     left: 20%;
-    top:2%;
+    top:2vh;
 }
